fix faq spacing

--- a/_sass/_faq.scss
+++ b/_sass/_faq.scss
@@ -2,15 +2,15 @@ body.faq {
   .post-title {
     margin-left: 30px;
   }
+
 }
 .faq-toc,.faq-content {
   text-align: left;
   .post-link {
       display: block;
       text-decoration: none;
-      line-height: 1.8rem;
-      margin-bottom: 0.8em;
-      font-size: 1.3rem;
+      line-height: 1rem;
+      font-size: 1rem;
       color: $link-color;
       font-weight: 400;
     }
@@ -27,8 +27,8 @@ body.faq {
     // padding for fixed nav
 
     a[name] {
-      padding-top: 80px;
-      margin-top: -80px;
+      padding-top: 110px;
+      margin-top: -90px;
       display: inline-block;
     }
 
@@ -39,15 +39,28 @@ body.faq {
 .faq-toc {
   padding-left: 22px;
   .post-link {
+
     font-family: 'Roboto';
     font-weight: 400;
-    font-size: 0.875rem;
+    font-size: 1rem;
     margin-bottom: 0;
+    margin-top: 0.5em;
   }
 }
 
 .faq-content {
   list-style-type: none;
+  .post-link {
+    margin-top: 20px;
+    line-height: 1.8rem;
+    font-size: 1.3rem;
+
+    color: #000;
+    &:visited {
+      color: #000;
+    }
+  }
+
 }
 
 hr.faq-hr {
